# unofficial-claude-desktop-linux

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AUTOMATION_PLAN.md  AUTOMATION_UPDATE.md  BUILD_FIX_NOTES.md  CLAUDE.md  LICENSE  README-python.md  README.md  TODO.md  build-claude-desktop.sh  build.sh  claude-desktop-launcher  claude-with-proxy.sh  pyproject.toml  setup-apt-repo.sh  setup.py  update-version.py
.github/workflows/: auto-build.yml  build.yml  setup-pages.yml
resources/share/applications/: claude-desktop.desktop
src/builder/: __init__.py  builder.py  cli.py  config.py  downloader.py  sources.py  templates.py
src/claude_desktop_linux/: __init__.py  builder.py  cli.py  config.py  detector.py  downloader.py  mac_builder.py  mac_detector.py  monitor.py  sources.py
src/native/claude-native/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
src/native/claude-native/src/: lib.rs
src/native/claude-native/src/input/: keymap.rs  mod.rs  uinput.rs
src/native/claude-native/src/system/: mod.rs
src/native/patchy-cnb/src/: lib.rs
