[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-desktop-linux"
dynamic = ["version"]
description = "Build Claude Desktop for Linux from Windows installer"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Claude Desktop Linux Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.0",
    "requests>=2.25",
    "tqdm>=4.60",
    "packaging>=21.0",
    "colorama>=0.4.4",
    "playwright>=1.40",
    "playwright-stealth>=1.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.14.0",
    "ruff>=0.8.4",
    "pre-commit>=3.5.0",
]

[project.scripts]
claude-desktop-build = "claude_desktop_linux.cli:main"
claude-desktop-monitor = "claude_desktop_linux.monitor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "claude_desktop_linux.__version__"}

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S603",   # subprocess without shell=True (we're careful)
    "S607",   # partial executable path (system commands)
    "Q000",   # Single quotes (we use single quotes)
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true